[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rtviz"
version = "0.1"
authors = [{name="Kathelijne Wendt"}]
description = "For visualizing reading times in a dashboard."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas", "plotly", "dash"]

[project.scripts]
rtviz = "rtviz:main"